--- a/mongodb-plus-wrapper/pom.xml
+++ b/mongodb-plus-wrapper/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.photowey</groupId>
-        <artifactId>spring-boot-starter-data-mongodb-plus</artifactId>
+        <artifactId>mongodb-plus</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
