--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     </parent>
 
     <groupId>com.photowey</groupId>
-    <artifactId>spring-boot-starter-data-mongodb-plus</artifactId>
+    <artifactId>mongodb-plus</artifactId>
     <packaging>pom</packaging>
 
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>spring-boot-starter-data-mongodb-plus</name>
+    <name>mongodb-plus</name>
     <description>spring-boot-starter-data-mongodb plus project for Spring Boot
     </description>
 
@@ -108,13 +108,13 @@
     </distributionManagement>
 
     <scm>
-        <url>https://github.com/photowey/spring-boot-starter-data-mongodb-plus
+        <url>https://github.com/photowey/mongodb-plus
         </url>
         <connection>
-            scm:git@github.com:photowey/spring-boot-starter-data-mongodb-plus.git
+            scm:git@github.com:photowey/mongodb-plus.git
         </connection>
         <developerConnection>
-            scm:git@github.com:photowey/spring-boot-starter-data-mongodb-plus.git
+            scm:git@github.com:photowey/mongodb-plus.git
         </developerConnection>
     </scm>
 
