--- a/mongodb-plus-wrapper/pom.xml
+++ b/mongodb-plus-wrapper/pom.xml
@@ -21,6 +21,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.photowey</groupId>
+            <artifactId>mongodb-plus-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
